Include agent in server build